--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle"
              src="img/profile-new.jpeg"
-             alt="Vaibhav's picture">
+             alt="Neel's picture">
       </span>
     </a>
     <button class="navbar-toggler"
