--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
        href="#page-top">
       <span class="d-block d-lg-none">Neel Patel</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle"
-             src="img/profile-new.jpeg"
+        <img class="img-fluid img-profile"
+             src="img/IMG_3725.PNG"
              alt="Neel's picture">
       </span>
     </a>
