--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <button type="button"
                   class="btn btn-dark"
                   data-dismiss="modal">Close</button>
-          <a href='./files/NeelPResumeApr25.pdf'
+          <a href='./files/NeelPResume.pdf'
              id='resumeEmailSubmit'
              target="_blank">
             <button class="btn btn-warning">Download</button>
@@ -207,7 +207,7 @@
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Undergraduate Machine Learning Researcher</h3>
             <div class="subheading mb-3">The Data Mine at Purdue University</div>
@@ -215,9 +215,9 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2024 - Present</span>
           </div>
-        </div>
+        </div> -->
 
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">STEP Program Intern</h3>
             <div class="subheading mb-3">Google Inc.</div>
@@ -225,7 +225,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2024 - July 2024</span>
           </div>
-        </div>
+        </div> -->
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
