--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <button type="button"
                   class="btn btn-dark"
                   data-dismiss="modal">Close</button>
-          <a href='./files/NeelPResume.pdf'
+          <a href='./files/NeelPResumeJuly25.pdf'
              id='resumeEmailSubmit'
              target="_blank">
             <button class="btn btn-warning">Download</button>
@@ -226,7 +226,24 @@
             <span class="text-primary">May 2024 - July 2024</span>
           </div>
         </div> -->
-
+         <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Software Engineer Intern</h3>
+            <div class="subheading mb-3">MiraPhoto</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2025 – September 2025</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Events Co-Chair</h3>
+            <div class="subheading mb-3">Project RISHI (Rural India Social Health Improvement) </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2024 – Present</span>
+          </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">National IT Team Member</h3>
