--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
     <div class="cardx p-4 mb-3">
       <div class="d-flex justify-content-between flex-wrap gap-2">
         <div>
+          <h3 class="h4 mb-1">Incoming Software Engineer Intern · CME Group</h3>
+          <div class="subtle">Chicago, IL · May 2026</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="cardx p-4 mb-3">
+      <div class="d-flex justify-content-between flex-wrap gap-2">
+        <div>
           <h3 class="h4 mb-1">Co‑Founder · Respond XR</h3>
           <div class="subtle">San Francisco, CA · Oct 2025 – Present</div>
         </div>
